[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comb-db"
version = "0.2.1"
description = "A 200K context window has everything but finds nothing. COMB has everything and finds what matters."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Ava Shakil", email = "ava@artifactvirtual.com"},
]
keywords = ["ai", "memory", "context", "archival", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
cli = ["click>=8.0"]

[project.scripts]
comb = "comb.cli:main"

[project.urls]
Homepage = "https://github.com/amuzetnoM/comb"
Repository = "https://github.com/amuzetnoM/comb"
Issues = "https://github.com/amuzetnoM/comb/issues"

[tool.setuptools.packages.find]
include = ["comb*"]
